# mdview

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
examples/: basic.md  code-blocks.md  images.md  long.md  stress.md  tables.md  watch.md
scripts/: integration-tmux.sh  integration-web.sh
src/: app.rs  cli.rs  image.rs  lib.rs  main.rs  markdown.rs  rendered.rs  scroll.rs  search.rs  selection.rs  syntax.rs  terminal.rs  watcher.rs  web.rs  web_app.html  width.rs
